# OpenCLAP

./: .gitignore  LICENSE  README.md  environment.yml  pyproject.toml  requirements.txt
assets/dummy_dataset/data/chunk-000/: episode_000000.parquet  episode_000001.parquet
assets/dummy_dataset/meta/: episodes.jsonl  extra_data.json  info.json  modality.json  tasks.jsonl
clap/: __init__.py  custom_lerobot.py  data_transform.py  data_transform_droid.py  data_transform_single_arm.py  dataset_lerobot.py  main_clap.py  model_clap.py  robot_prompt.py  unified_action.py
clap/assets/: dataset_statistics_32.json  libero.yaml
clap/configs/: clap-s1-l32.yaml  clap-s2-l32.yaml
clap/modules/: __init__.py  action_backbone.py  blocks.py  blocks_flash.py  clap.py  mld_vae.py
clap/scripts/: run_stage1.sh  run_stage2.sh  test_stage.sh
deployment/model_server/: server_policy.py
docs/: clap-s3-l32-original.yaml.reference
examples/Astribot/: README.md  astribot_transforms.py
examples/Astribot/eval_files/: run_sync_policy_server.sh  sync_policy_client.py  sync_policy_server.py
examples/Astribot/train_files/: run_astribot_qwenar.sh  run_astribot_qwenpikm.sh  setup_astribot_meta.py  starvla_astribot_qwenar.yaml  starvla_astribot_qwenpikm.yaml
examples/Astribot/train_files/data_registry/: data_config.py
examples/LIBERO/eval_files/: eval_libero.py  eval_libero.sh
examples/LIBERO/eval_files/auto_eval_scripts/: run_l16_step40000.sh
examples/LIBERO/train_files/: run_libero_clap_km_l16.sh  starvla_libero_clap_km_l16.yaml
pretrained/: Qwen3-VL-4B-Instruct  dinov3
scripts/: smoke_test.py  smoke_test_e2e.py
starVLA/dataloader/: __init__.py
starVLA/model/framework/: share_tools.py
starVLA/model/framework/VLM4A/: QwenAR.py  QwenPI.py  QwenPIKM.py
starVLA/model/modules/action_model/: __init__.py
starVLA/model/modules/vlm/: __init__.py
